--- a/application.json
+++ b/application.json
@@ -60,6 +60,7 @@
   "publishedAppLayout": {
     "type": "DESKTOP"
   },
+  "unpublishedCustomJSLibs": [],
   "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
   "applicationVersion": 2,
