Add Open Orders table

--- a/application.json
+++ b/application.json
@@ -9,7 +9,7 @@
       "isDefault": false
     },
     {
-      "id": "Actions All Compounds",
+      "id": "OpenOrders",
       "isDefault": false
     }
   ],
